# algofarm

./: .gitignore  Cargo.toml  LICENSE  README.md  pyproject.toml  test.py
.github/workflows/: CI.yml
src/: dl_formulas.rs  dsa.rs  lib.rs  ml.rs  tensor.rs
