[package]
name = "algofarm"
version = "0.1.0"
edition = "2024"
description = "A high-performance algorithm library built in Rust for Python."
authors = ["Yash Mehrotra <yashmehrotra45@gmail.com>"]
requires-python = ">=3.12"
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "License :: OSI Approved :: MIT License",
]
dynamic = ["version"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/redxdager/algofarm"

[lib]
name = "algofarm"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.23", features = ["extension-module", "abi3-py312"] }
