[package]
name = "algofarm"
version = "0.1.1"
edition = "2024"
description = "A high-performance algorithm library built in Rust for Python."
authors = ["Yash Mehrotra <yashmehrotra45@gmail.com>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/redxdager/algofarm"

[lib]
name = "algofarm"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.23", features = ["extension-module", "abi3-py312"] }
