[build-system]
requires = ["maturin>=1.7,<2.0"]
build-backend = "maturin"

[project]
name = "algofarm"
requires-python = ">=3.12"
description = "A high-performance algorithm library built in Rust for Python."
readme = "README.md"
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "License :: OSI Approved :: MIT License",
]
dynamic = ["version"]

[tool.maturin]
features = ["pyo3/extension-module"]

[tool.maturin.generate-ci.github]
trusted-publishing = true
publishing-environment = "release"
